syntax = "proto3";

package proto.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/untea/bottom_babruysk/internal/transport/gen/proto/v1;protov1";

service UsersService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
}

message User {
  string id = 1;
  string email = 2;
  string password_hash = 3;
  string display_name = 4;
  Role role = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}

enum Role {
  ROLE_UNSPECIFIED = 0;
  ROLE_USER = 1;
  ROLE_ADMIN = 2;
}

message CreateUserRequest {
  string email = 1;
  string password_hash = 2;
  string display_name = 3;
  Role role = 4;
}

message CreateUserResponse {
  string id = 1;
}

message GetUserRequest {
  string id = 1;
}

message GetUserResponse {
  User user = 1;
}

message ListUsersRequest {
  uint32 limit = 1;
  uint32 offset = 2;
  Role role = 3;
  string sort_field = 4;
  string sort_order = 5;
}

message ListUsersResponse {
  repeated User users = 1;
}

message UpdateUserRequest {
  string id = 1;
  optional string display_name = 2;
  optional Role role = 3;
}

message UpdateUserResponse {}

message DeleteUserRequest {
  string id = 1;
}

message DeleteUserResponse {}
